Added ability to change divider on characteristics above and below 31

--- a/skillmod.properties
+++ b/skillmod.properties
@@ -12,6 +12,14 @@ useSkillMod=true
 # NOT IMPLEMENTED YET
 removePriestPenalty=true
 
+# The lower divider is applied to skillgain on all characteristics below 31
+# The upper divider is applied to skillgain on all characteristics above 31
+# This is a divider so higher number means less skillgain
+# 5.0 is default for the lower stat divider
+# 45.0 is default for the upper stat divider
+lowerStatDivider=5.0
+upperStatDivider=45.0
+
 # 1.0 is the default setting for each skill
 # increase this number to have a faster skillgain, set it to 0.5 for around halved skill gain
 # These settings do stack with the server skillgainrate.
